--- a/src/components/MainGrid/style.scss
+++ b/src/components/MainGrid/style.scss
@@ -10,5 +10,11 @@
       display: block;
       width: 100%;
     }
+    .comment {
+      margin: 5px 0;
+      input {
+        color: #706a6a;
+      }
+    }
   }
 }
