--- a/src/components/MainGrid/style.scss
+++ b/src/components/MainGrid/style.scss
@@ -10,11 +10,14 @@
       display: block;
       width: 100%;
     }
-    .comment {
-      margin: 5px 0;
-      input {
-        color: #706a6a;
-      }
-    }
+
+  }
+}
+.comment {
+  margin: 5px 0;
+  input {
+    color: #c1bdbd;
+    border-color: transparent;
+
   }
 }
