--- a/src/components/MainGrid/style.scss
+++ b/src/components/MainGrid/style.scss
@@ -1,23 +1,29 @@
 .main_grid {
   max-width: 1100px;
   margin: 100px auto;
-  .imgHolder {
-    width: 100%;
-    overflow: hidden;
+   .holder {
+     //width: 100%;
+     //min-height: 300px;
+     .imgHolder {
+       width: 100%;
+       overflow: hidden;
 
-    border-radius: 7px ;
-    img {
-      display: block;
-      width: 100%;
-    }
+       border-radius: 7px ;
+       img {
+         display: block;
+         width: 100%;
+       }
 
-  }
+     }
+   }
 }
 .comment {
   margin: 5px 0;
   input {
-    color: #c1bdbd;
+    color: #585757;
     border-color: transparent;
-
+  }
+  .btn {
+    margin: 10px;
   }
 }
